# EFI2_python

./: README.md  app.py  decorators.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed.py  test_api.http  views.py
instance/: miniblog.db
migrations/versions/: 547a738b6197_migracion_inicial.py  f7a45a0d606e_migración_inicial.py
repositories/: category_repository.py  comment_repository.py  post_repository.py  user_repository.py
services/: __init__.py  category_service.py  comment_service.py  post_service.py  user_service.py
templates/: base.html  create_post.html  index.html  post.html  posts.html
templates/auth/: login.html  register.html
