[project]
name = "efi2-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker",
    "click",
    "Flask",
    "Flask-SQLAlchemy",
    "greenlet",
    "itsdangerous",
    "Jinja2",
    "MarkupSafe",
    "marshmallow",
    "marshmallow-sqlalchemy",
    "PyMySQL",
    "SQLAlchemy",
    "typing_extensions",
    "Werkzeug",
    "bcrypt<4.0",
    "Flask-JWT-Extended",
    "passlib[bcrypt]==1.7.4",
    "flask-migrate>=4.1.0",
    "flask-cors>=6.0.1",
]
